# bego-c

./: CMakeLists.txt  LICENSE  README.md
include/: bego.h  bego_win.h
src/: bego_keyboard.cpp  bego_mouse.cpp  bego_win.cpp  dpi_awareness.cpp  errors.cpp  example.cpp  example_autopress.cpp  input_helpers.cpp  key_converter.cpp  settings.cpp
